# libfaad

./: CMakeLists.txt  decode_example.c  faad2.spec.in  test.c
aacDECdrop/: decode.c
frontend/: audio.c  faad.vcproj  main.c
include/: faad.h  neaacdec.h  neaacdec2.h
libfaad/: CMakeLists.txt  Makefile.am  Makefile.in  common.h  decoder.c  mp4.h
plugins/xmms/src/: libmp4.c
